<resources>
    <string name="app_name">The Movies</string>
    <string name="movie_image">Movie Image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="cinema">Cinema</string>
    <string name="tv_shows">TV Shows</string>
    <string name="title">Title</string>
    <string name="detail">Detail</string>
    <string name="Description">Description</string>
    <string name="language">Language</string>
    <string name="_4_5">4.5</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="like">Like</string>
    <string name="add_favorite">Add to Favorite</string>
    <string name="delete_favorite">Delete From Favorites</string>
    <string name="error">System Error</string>
    <string name="data_not_found">data not found</string>
    <string name="message_undo">Cancel delete item?</string>
    <string name="message_ok">OK</string>
    <string name="no_fav_movies">No Favorite Movies</string>
    <string name="no_favorite_tv_shows">No Favorite TV Shows</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>
